--- a/style.css
+++ b/style.css
@@ -51,9 +51,6 @@ main {
 }
 
 .img-fluid {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   width: 100%;
   height: 220px;
 }
@@ -152,7 +149,7 @@ main {
 
 .attribution {
   width: 80%;
-  margin: 50px auto 0;
+  margin: 20px auto 30px;
   color: var(--dark-blue);
   text-align: center;
 }
